--- a/car.html
+++ b/car.html
@@ -154,7 +154,7 @@
 
         <div class="startscreen">
             <p>Press To Start<br>
-            Arrow Keys to Move<br>
+            Arrow Keys to Move the car<br>
         If you hit by another car you will lose</p>
 
         </div>
